# CS236-Project1

./: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultilineAutomaton.cpp  MultilineAutomaton.h  MultiplyAutomaton.h  Node.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.h  Relation.cpp  Relation.h  (+21 more)
Automata/: Automaton.h  CommaAutomaton.cpp  MultiplyAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h
project5-exampleIO/: in40.txt
